Fixed layout issues

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -5,6 +5,10 @@
   direction: rtl;
 }
 
+.ex-mt-auto{
+  margin-top: auto;
+}
+
 .ex-dir-row-reverse{
   flex-direction: row-reverse!important;
 }
